Remove whitespaces, update footer & fix probs

--- a/css/defy.css
+++ b/css/defy.css
@@ -22,7 +22,6 @@ body {
 	background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB;
 	background-size: 22px 22px;
  color: #fff;
-
 }
 h1 {
  margin: 1em 0 0.5em 0;
@@ -81,8 +80,7 @@ unart{
 
      }
    } */
-section{
-
+/*section{
 }
 /* Circle */
 .hover15 figure {
@@ -151,5 +149,6 @@ footer > a:hover {
   color: #e5e5e5;
 	text-decoration-line:bold;}
 	footer > a:visited {
-	 text-decoration:;
+	 text-decoration:#FFF;
 }
+
